--- a/package.json
+++ b/package.json
@@ -1,19 +1,20 @@
 {
-  "name": "ld44-your-life-is-your-currency",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "parcel src/index.html"
-  },
-  "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "@types/pixi.js": "^4.8.7",
-    "parcel-bundler": "^1.12.3",
-    "prettier": "^1.17.0",
-    "typescript": "^3.4.5"
-  },
-  "dependencies": {}
+	"name": "ld44-your-life-is-your-currency",
+	"version": "1.0.0",
+	"description": "",
+	"main": "index.js",
+	"scripts": {
+		"test": "echo \"Error: no test specified\" && exit 1",
+		"dev": "parcel src/index.html",
+		"build": "parcel build src/index.html --public-url ./"
+	},
+	"author": "",
+	"license": "ISC",
+	"devDependencies": {
+		"@types/pixi.js": "^4.8.7",
+		"parcel-bundler": "^1.12.3",
+		"prettier": "^1.17.0",
+		"typescript": "^3.4.5"
+	},
+	"dependencies": {}
 }
